# epistack-adversarial

./: .gitignore  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  README.md  config.yaml  pyproject.toml  run_pipeline.py
archive/: README.md
archive/v0_prototype/: __init__.py  assessment.py  oracle.py  scoring.py
data/sample/: README.md  pipeline_trace.json
docs/: EARLY_FEEDBACK_FORM.md  METHODOLOGY.md  PIPELINE.md  PRIMARY_DOCUMENT.md  README.md  SUBMISSION.md
docs/diagrams/: README.md  architecture.md  covid_discourse.md  three_cases.md
examples/: README.md
examples/covid_origins/: sources.yaml
examples/eggs_health/: sources.yaml
examples/lhc_black_holes/: sources.yaml
output/: README.md
output/covid_origins/: index.html
output/covid_origins/claims/: clm_0001.html  clm_0007.html  clm_0021.html  clm_0029.html  clm_0033.html  clm_0037.html  clm_0049.html  clm_0069.html  clm_0075.html  clm_0077.html  clm_0091.html  clm_0095.html  clm_0184.html  clm_0229.html  clm_0243.html
output/covid_origins/cruxes/: crux_00.html  crux_01.html  crux_02.html  crux_03.html  crux_04.html  crux_05.html  crux_06.html  crux_07.html  crux_08.html  crux_09.html
output/covid_origins/positions/: pos_00.html  pos_01.html  pos_02.html
output/eggs_health/: index.html
output/eggs_health/claims/: clm_0005.html  clm_0006.html  clm_0007.html  clm_0008.html  clm_0009.html  clm_0010.html  clm_0011.html  clm_0017.html  clm_0039.html  clm_0040.html  clm_0042.html  clm_0049.html
output/lhc_black_holes/: index.html
scripts/: README.md  add_challenge.py  smoke_test.py  verify.py
src/epistack/: README.md  __init__.py  cli.py  compliance_detector.py  confidence.py  config.py  crux_detection.py  discourse.py  extraction.py  fetch.py  generate_site.py  ingestion.py  llm.py  models.py  pipeline.py  relationships.py  scoring.py  settling.py  store.py  structure.py  verification.py
static/: README.md
templates/: README.md
tests/: README.md  conftest.py  test_compliance.py  test_confidence.py  test_crux.py  test_discourse.py  test_extraction.py  test_fetch.py  test_integration.py  test_llm.py  test_relationships.py  test_scoring.py  test_settling.py  test_store.py  test_verification.py
(+30 files in other folders)
