[project]
name = "epistack-adversarial"
version = "0.2.0"
description = "Adversarial epistemic verification for AI-assisted knowledge bases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rahul Kumar"},
]

dependencies = [
    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    # HTTP + async
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    # Data + config
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    # Clustering (discourse mapping)
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4.0",
    # Visualization (static HTML site)
    "jinja2>=3.1.0",
    # Source fetching
    "trafilatura>=1.8.0",
    "pymupdf>=1.23.0",
    "youtube-transcript-api>=0.6.0",
    # Logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3.0",
]

# CLI entry point removed — use `python run_pipeline.py` directly
# [project.scripts]
# epistack = "epistack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epistack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
